examples/test/testpolicy3177.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy3177
  namespace: namespace369
spec:
  podSelector:
    matchLabels:
      key42: value38
      key44: value37
      key41: value38
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key25: value35
      podSelector:
        matchLabels:
          key41: value42
          key5: value1
